Add the subscription component

--- a/src/localization/language-en.json
+++ b/src/localization/language-en.json
@@ -1,4 +1,8 @@
 {
+  "email": "email",
+  "launchDate": "launch date",
+  "stayTuned": "Stay tuned for",
+  "subscribe": "Subscribe",
   "subtitleLine1": "BUILD BY DOG OWNER",
   "subtitleLine2": "FOR DOG OWNER"
 }
