--- a/src/localization/language-fr.json
+++ b/src/localization/language-fr.json
@@ -1,4 +1,8 @@
 {
+  "email": "courriel",
+  "launchDate": "lancement",
+  "stayTuned": "Restez à l'affût du",
+  "subscribe": "S'inscrire",
   "subtitleLine1": "CONSTRUIT PAR VOUS",
   "subtitleLine2": "POUR VOTRE CHIEN"
 }
